Fix: tidy & readme
