# cmd/app-core/docs/swagger.json
@@ -131,7 +131,7 @@
             },
             "patch": {
                 "description": "just test only , not really update",
-                "summary": "test patch InfoUpdate API",
+                "summary": "test patch InfoUpdate API , in-memory update",
                 "parameters": [
                     {
                         "description": "InfoUpdate",
@@ -174,14 +174,14 @@
         "models.InfoUpdate": {
             "type": "object",
             "required": [
-                "description",
-                "name"
+                "name",
+                "startupMsg"
             ],
             "properties": {
-                "description": {
+                "name": {
                     "type": "string"
                 },
-                "name": {
+                "startupMsg": {
                     "type": "string"
                 }
             }
