# services/router/usecase/info_ucase.go
@@ -22,7 +22,7 @@ func NewInfoUsecase(config config.CofigDefinition) models.InfoUsecase {
 //implement info usecase logic , In e.g.: ginrouter wrapper 'Usecase' struct for handle
 //實作InfoUsecase[介面]裡面的方法， 範例中delevery 的ginrouter.NewInfoHandler 的參數會需要它
 func (*infoUsecase) GetInfo() (models.Info, error) {
-	return models.Info{Name: config.ConfigData.Service.Name, Version: internal.Version}, nil
+	return models.Info{Name: config.ConfigData.Service.Name, Version: internal.Version, StartupMsg: config.ConfigData.Service.StartupMsg}, nil
 
 }
 
@@ -31,7 +31,7 @@ func (*infoUsecase) Update(body *models.InfoUpdate) error {
 		return errors.Errorf("no Name")
 	}
 	config.ConfigData.Service.Name = body.Name
-	// internal.Version = info.Version
+	config.ConfigData.Service.StartupMsg = body.StartupMsg
 
 	return nil
 }
